--- a/ProjetoShow/MainPage.xaml
+++ b/ProjetoShow/MainPage.xaml
@@ -3,34 +3,72 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ProjetoShow.MainPage">
 
-    <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
+    
+     <Grid>
+          <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="100"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="100"/>
+          </Grid.RowDefinitions>
+          <Grid.ColumnDefinitions>
+                <ColumnsDefinitions Width="*"/>
+                <ColumnsDefinitions Width="*"/>
+                <ColumnsDefinitions Width="*"/>
+         </Grid.ColumnDefinitions>
 
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
+        <Frame CornerRadius="20" 
+               Padding="20" 
+               Margin="20" 
+               BackgroundColor="White"/>
+               
+           
+                
+                <Label Text="Questão:" 
+                        FontAttributes="Bold" 
+                        Padding="10,10,0,0" />
 
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
+                 
+                    <Button x:Name="AnswerA" 
+                            Text="A-" 
+                            HeightRequest="40"  />
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
-        </VerticalStackLayout>
-    </ScrollView>
+                    <Button x:Name="AnswerB" 
+                            Text="B-" 
+                            HeightRequest="40"  />
 
-</ContentPage>
+                    <Button x:Name="AnswerC"
+                            Text="C-" 
+                            HeightRequest="40"  />
+
+                    <Button x:Name="AnswerD"
+                            Text="D-"
+                            HeightRequest="40"  />
+
+                    <Button x:Name="AnswerE"
+                            Text="E-" 
+                            HeightRequest="40"  />
+              
+
+               
+                <StackLayout Orientation="Horizontal" 
+                            HorizontalOptions="Center" 
+                            Spacing="10" Margin="20,0,0,0"/>
+
+                    <Button Text="Certas" 
+                            WidthRequest="80" 
+                            Clicked="OnCorrectClicked" />
+                            Grid.Row=""
+                    <Button Text="Retirar 1 errada"
+                            WidthRequest="120" 
+                            Clicked="OnRemoveWrongClicked" />
+
+                    <Button Text="Universitário"    
+                            WidthRequest="120" 
+                            Clicked="OnAskStudentClicked" />
+                </StackLayout>
+   </ContentPage>
