--- a/ProjetoShow/MainPage.xaml
+++ b/ProjetoShow/MainPage.xaml
@@ -1,19 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ProjetoShow.MainPage">
-
+             x:Class="ProjetoShow.MainPage"
+             Shell.NavBarIsVisible="false">
     
      <Grid>
           <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
-                <RowDefinition Height="100"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="100"/>
+                <RowDefinition Height="90"/>
+                <RowDefinition Height="55"/>
+                <RowDefinition Height="55"/>
+                <RowDefinition Height="55"/>
+                <RowDefinition Height="55"/>
+                <RowDefinition Height="55"/>
+                <RowDefinition Height="70"/>
           </Grid.RowDefinitions>
           <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
@@ -25,16 +25,17 @@
                  Aspect="AspectFill"
                  Grid.Row="0"
                  Grid.Column="0"
+                 Grid.RowSpan="8"
                  Grid.ColumnSpan="3"/>
 
-          <Frame Opacity=".6"
+          <Frame BackgroundColor="#77ffffff"
                  CornerRadius="20" 
                  BorderColor="Black"
                  Grid.Row="1"
                  Grid.ColumnSpan="3">
                
           <Label Text="Questão:" 
-                 HorizontalTextAlignment="20" 
+                 HorizontalTextAlignment="Center" 
                  FontSize="18"
                  TextColor="Black"/>
 
@@ -42,7 +43,7 @@
 
                     <Button Text="A-"
                             BorderWidth="2"
-                            BackgroundColor="White"
+                            BackgroundColor="#c99908"
                             TextColor="Black"
                             Margin="0,0,0,10"
                             FontSize="18"
@@ -53,7 +54,7 @@
 
                     <Button Text="B-"
                             BorderWidth="2"
-                            BackgroundColor="White"
+                            BackgroundColor="#c99908"
                             TextColor="Black"
                             Margin="0,0,0,10"
                             FontSize="18"
@@ -64,7 +65,7 @@
 
                     <Button Text="C-"
                             BorderWidth="2"
-                            BackgroundColor="White"
+                            BackgroundColor="#c99908"
                             TextColor="Black"
                             Margin="0,0,0,10"
                             FontSize="18"
@@ -75,7 +76,7 @@
 
                     <Button Text="D-"
                             BorderWidth="2"
-                            BackgroundColor="White"
+                            BackgroundColor="#c99908"
                             TextColor="Black"
                             Margin="0,0,0,10"
                             FontSize="18"
@@ -86,7 +87,7 @@
 
                     <Button Text="E-"
                             BorderWidth="2"
-                            BackgroundColor="White"
+                            BackgroundColor="#c99908"
                             TextColor="Black"
                             Margin="0,0,0,10"
                             FontSize="18"
@@ -100,7 +101,7 @@
                                 BorderWidth="2"
                                 Padding=".12"
                                 TextColor="Black"
-                                BackgroundColor="White"
+                                BackgroundColor="#b58a07"
                                 Margin="0,0,0,10"
                                 FontSize="18"
                                 BorderColor="Black"
@@ -111,7 +112,7 @@
                                 BorderWidth="2"
                                 Padding=".12"
                                 TextColor="Black"
-                                BackgroundColor="White"
+                                BackgroundColor="#b58a07"
                                 Margin="0,0,0,10"
                                 FontSize="18"
                                 BorderColor="Black"
@@ -122,7 +123,7 @@
                               BorderWidth="2"
                               Padding=".12"
                               TextColor="Black"
-                              BackgroundColor="White"
+                              BackgroundColor="#b58a07"
                               Margin="0,0,0,10"
                               FontSize="18"
                               BorderColor="Black"
