--- a/ProjetoShow/MainPage.xaml
+++ b/ProjetoShow/MainPage.xaml
@@ -8,12 +8,13 @@
           <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="90"/>
+                <RowDefinition Height="60"/>
                 <RowDefinition Height="55"/>
                 <RowDefinition Height="55"/>
                 <RowDefinition Height="55"/>
                 <RowDefinition Height="55"/>
                 <RowDefinition Height="55"/>
-                <RowDefinition Height="70"/>
+                <RowDefinition Height="55"/>
           </Grid.RowDefinitions>
           <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
@@ -25,7 +26,7 @@
                  Aspect="AspectFill"
                  Grid.Row="0"
                  Grid.Column="0"
-                 Grid.RowSpan="8"
+                 Grid.RowSpan="9"
                  Grid.ColumnSpan="3"/>
 
           <Frame BackgroundColor="#77ffffff"
@@ -40,7 +41,35 @@
                  FontSize="18"
                  TextColor="Black"/>
 
-            </Frame>     
+          </Frame>
+
+          <Frame BackgroundColor="#77ffffff"
+                 CornerRadius="20" 
+                 BorderColor="Black"
+                 Grid.Row="2"
+                 Grid.ColumnSpan="2">
+               
+
+          <Label Text="Pontuação:"
+                 HorizontalTextAlignment="Center" 
+                 FontSize="16"
+                 TextColor="Black"/>
+                 
+            </Frame> 
+
+            <Frame BackgroundColor="#77ffffff"
+                 CornerRadius="20" 
+                 BorderColor="Black"
+                 Grid.Row="2"
+                 Grid.Column="3">
+               
+
+          <Label Text="Nível:"
+                 HorizontalTextAlignment="Center" 
+                 FontSize="16"
+                 TextColor="Black"/>
+                 
+            </Frame> 
 
                     <Button x:Name="btnResp1"
                             Clicked="OnBtnResposta01Clicked"
@@ -50,7 +79,7 @@
                             Margin="0,0,0,10"
                             FontSize="18"
                             BorderColor="Black"
-                            Grid.Row="2"
+                            Grid.Row="3"
                             Grid.Column="0"
                             Grid.ColumnSpan="3"/>
 
@@ -62,7 +91,7 @@
                             Margin="0,0,0,10"
                             FontSize="18"
                             BorderColor="Black"
-                            Grid.Row="3"
+                            Grid.Row="4"
                             Grid.Column="0"
                             Grid.ColumnSpan="3"/>
 
@@ -74,7 +103,7 @@
                             Margin="0,0,0,10"
                             FontSize="18"
                             BorderColor="Black"
-                            Grid.Row="4"
+                            Grid.Row="5"
                             Grid.Column="0"
                             Grid.ColumnSpan="3"/>
 
@@ -86,7 +115,7 @@
                             Margin="0,0,0,10"
                             FontSize="18"
                             BorderColor="Black"
-                            Grid.Row="5"
+                            Grid.Row="6"
                             Grid.Column="0"
                             Grid.ColumnSpan="3"/>
 
@@ -98,7 +127,7 @@
                             Margin="0,0,0,10"
                             FontSize="18"
                             BorderColor="Black"
-                            Grid.Row="6"
+                            Grid.Row="7"
                             Grid.Column="0"
                             Grid.ColumnSpan="3"/>
 
@@ -111,7 +140,7 @@
                                 Margin="0,0,0,10"
                                 FontSize="15"
                                 BorderColor="Black"
-                                Grid.Row="7"
+                                Grid.Row="8"
                                 Grid.Column="0"/>
                                
                        <Button Text="Retirar 1  " 
@@ -122,7 +151,7 @@
                                 Margin="0,0,0,10"
                                 FontSize="15"
                                 BorderColor="Black"
-                                Grid.Row="7"
+                                Grid.Row="8"
                                 Grid.Column="1"/>
 
                       <Button Text="Universtários"  
@@ -133,7 +162,7 @@
                               Margin="0,0,0,10"
                               FontSize="15"
                               BorderColor="Black"
-                              Grid.Row="7"
+                              Grid.Row="8"
                               Grid.Column="2"/> 
 
                 </Grid>
