--- a/ProjetoShow/MainPage.xaml
+++ b/ProjetoShow/MainPage.xaml
@@ -143,7 +143,8 @@
                                 Grid.Row="8"
                                 Grid.Column="0"/>
                                
-                       <Button Text="Retirar 1  " 
+                       <Button Text="Retirar 3" 
+                                Clicked="Retira3"
                                 BorderWidth="2"
                                 Padding=".12"
                                 TextColor="Black"
